Implementat i documentat llistat threads
